fix styling overflow on navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@
 	padding: 0.5rem;
 	background-color: whitesmoke;
 	align-items: center;
+	overflow: hidden;
 
 	.nav_logo {
 		text-align: center;
@@ -365,7 +366,7 @@
 
 	.project_card {
 		// border: 5px solid pink;
-		margin: 8px 8 px;
+		margin: 8px 8px;
 		flex-basis: 100%;
 		display: flex;
 		flex-direction: column;
